@@ -1,5 +1,13 @@
 2007-05-13  Thomas Wood  <thos@gnome.org>
 
+	* appearance-themes.c: (themes_init), (theme_changed_func),
+	(theme_selection_changed_cb), (theme_custom_cb):
+	- Sort metathemes icon view
+	- Apply theme on selection change
+	- Use theme name rather than display name to apply theme
+
+2007-05-13  Thomas Wood  <thos@gnome.org>
+
 	* appearance-main.c: (init_appearance_data):
 	* appearance-themes.c: (themes_init), (theme_activated_cb):
 	* appearance.glade:
